--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "gatsby": "1.9.153",
     "gatsby-link": "1.6.34",
     "gatsby-plugin-react-helmet": "2.0.3",
+    "gatsby-source-filesystem": "^1.5.11",
+    "gatsby-transformer-json": "^1.0.14",
     "jquery": "3.2.1",
     "react": "16.2.0",
     "react-dom": "16.2.0",
