--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "version": "1.0.0",
   "author": "Al McKinlay <github@10people.co.uk>",
   "dependencies": {
-    "bootstrap": "4.0.0-beta.3",
-    "gatsby": "1.9.153",
+    "bootstrap": "4.0.0",
+    "gatsby": "1.9.164",
     "gatsby-link": "1.6.34",
     "gatsby-plugin-react-helmet": "2.0.3",
-    "gatsby-source-filesystem": "^1.5.11",
-    "gatsby-transformer-json": "^1.0.14",
-    "jquery": "3.2.1",
+    "gatsby-source-filesystem": "1.5.14",
+    "gatsby-transformer-json": "1.0.14",
+    "jquery": "3.3.1",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-helmet": "5.2.0",
