--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Al McKinlay <github@10people.co.uk>",
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.2",
     "bootstrap": "4.0.0",
     "gatsby": "1.9.164",
     "gatsby-link": "1.6.34",
@@ -13,6 +14,7 @@
     "jquery": "3.3.1",
     "react": "16.2.0",
     "react-dom": "16.2.0",
+    "react-font-awesome-5": "^0.2.0",
     "react-helmet": "5.2.0",
     "reactstrap": "5.0.0-alpha.4"
   },
