--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-dom": "16.2.0",
     "react-font-awesome-5": "^0.2.0",
     "react-helmet": "5.2.0",
+    "react-popper": "^0.7.5",
+    "react-transition-group": "^2.2.1",
     "reactstrap": "5.0.0-alpha.4"
   },
   "keywords": [
