--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby": "1.9.166",
     "gatsby-link": "1.6.34",
     "gatsby-plugin-react-helmet": "2.0.4",
+    "gatsby-plugin-styled-components": "^2.0.5",
     "gatsby-source-filesystem": "1.5.14",
     "gatsby-transformer-hjson": "^1.0.2",
     "jquery": "3.3.1",
@@ -18,7 +19,8 @@
     "react-helmet": "5.2.0",
     "react-popper": "^0.7.5",
     "react-transition-group": "^2.2.1",
-    "reactstrap": "5.0.0-alpha.4"
+    "reactstrap": "5.0.0-alpha.4",
+    "styled-components": "^3.0.2"
   },
   "keywords": [
     "completionist",
