--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react-font-awesome-5": "^0.2.0",
     "react-helmet": "5.2.0",
     "react-popper": "^0.7.5",
+    "react-redux": "^5.0.6",
     "react-transition-group": "^2.2.1",
     "reactstrap": "5.0.0-alpha.4",
+    "redux": "^3.7.2",
     "styled-components": "^3.0.2"
   },
   "keywords": [
@@ -31,5 +33,8 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "redux-devtools": "^3.4.1"
   }
 }
