--- a/package.json
+++ b/package.json
@@ -4,25 +4,25 @@
   "version": "1.0.0",
   "author": "Al McKinlay <github@10people.co.uk>",
   "dependencies": {
-    "@fortawesome/fontawesome": "^1.1.2",
+    "@fortawesome/fontawesome": "1.1.2",
     "bootstrap": "4.0.0",
     "gatsby": "1.9.166",
     "gatsby-link": "1.6.34",
     "gatsby-plugin-react-helmet": "2.0.4",
-    "gatsby-plugin-styled-components": "^2.0.5",
+    "gatsby-plugin-styled-components": "2.0.5",
     "gatsby-source-filesystem": "1.5.14",
     "gatsby-transformer-hjson": "^1.0.2",
     "jquery": "3.3.1",
     "react": "16.2.0",
     "react-dom": "16.2.0",
-    "react-font-awesome-5": "^0.2.0",
+    "react-font-awesome-5": "0.2.1",
     "react-helmet": "5.2.0",
-    "react-popper": "^0.7.5",
-    "react-redux": "^5.0.6",
-    "react-transition-group": "^2.2.1",
+    "react-popper": "0.7.5",
+    "react-redux": "5.0.6",
+    "react-transition-group": "2.2.1",
     "reactstrap": "5.0.0-alpha.4",
-    "redux": "^3.7.2",
-    "styled-components": "^3.0.2"
+    "redux": "3.7.2",
+    "styled-components": "3.0.2"
   },
   "keywords": [
     "completionist",
