--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
+    "build": "gatsby build --prefix-paths",
     "develop": "gatsby develop",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
