--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,9 +34,9 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
 
       - run: yarn run build
+          post:
+              - sudo apt-get update; sudo apt-get install rsync
 
       - deploy:
-          pre:
-              - sudo apt-get update; sudo apt-get install rsync
           name: deploy master
           command: rsync -a public/ 10people.co.uk:~/completionist/ && ssh 10people.co.uk rsync -a ~/completionist/ /var/www/completionist/
