--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Al McKinlay <github@10people.co.uk>",
   "dependencies": {
     "@fortawesome/fontawesome": "1.1.8",
+    "@quickbaseoss/babel-plugin-styled-components-css-namespace": "^0.1.1",
     "bootstrap": "4.1.3",
     "gatsby": "2.0.28",
     "gatsby-link": "2.0.4",
