--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,12 +35,23 @@ jobs:
 
       - run: yarn run build
 
+      - setup_remote_docker
+
+      - run: docker build . -t toolbox
+
+      - run: docker save -o public/toolbox.tar toolbox
+
       - deploy:
           name: deploy master
           command: |
             if [ "${CIRCLE_BRANCH}" = 'master' ]; then
                sudo apt-get install -y rsync
                echo '10people.co.uk,139.59.197.112 ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBEC+H4axl5nWwKr683pS6R3P4vEvWQUjEWTrAosaPZXAbXOYEMLNB4G/xlmiJ5BIcE4S/IyKlM9wgSRyiBXAQ6k=' >> ~/.ssh/known_hosts
-               rsync -a public/ 10people.co.uk:~/completionist/ && ssh 10people.co.uk sudo rsync -a ~/completionist/ /root/server/nginx/data/completionist
+               # Copy everything over
+               rsync -a public/ 10people.co.uk:~/completionist/
+               # Import docker, delete docker tar, copy everything over to correct dir
+               ssh 10people.co.uk "sudo docker load < ~/completionist/toolbox.tar && rm ~/completionist/toolbox.tar && sudo rsync -a ~/completionist/ /root/server/nginx/data/completionist"
+               # Restart the docker image
+               ssh 10people.co.uk "cd /root/server && sudo docker-compose restart toolbox"
             fi
 
