--- a/package.json
+++ b/package.json
@@ -4,9 +4,27 @@
   "version": "1.0.0",
   "author": "Al McKinlay <github@10people.co.uk>",
   "dependencies": {
+    "diskdb": "^0.1.17",
+    "express": "^4.17.1",
+    "uuid": "^3.3.3",
+    "ws": "^7.2.0"
+  },
+  "keywords": [
+    "completionist",
+    "gaming"
+  ],
+  "license": "MIT",
+  "scripts": {
+    "build": "gatsby build --prefix-paths",
+    "dev": "concurrently 'gatsby develop' 'yarn start'",
+    "start": "node server/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
     "@fortawesome/fontawesome": "1.1.8",
     "@quickbaseoss/babel-plugin-styled-components-css-namespace": "0.1.1",
     "bootstrap": "4.3.1",
+    "concurrently": "5.0.0",
     "gatsby": "2.18.3",
     "gatsby-link": "2.2.24",
     "gatsby-plugin-react-helmet": "3.1.15",
@@ -23,21 +41,10 @@
     "react-transition-group": "4.3.0",
     "reactstrap": "8.1.1",
     "redux": "4.0.4",
+    "redux-devtools": "3.5.0",
     "redux-persist": "6.0.0",
     "redux-persist-crosstab": "3.7.0",
+    "redux-subscriber": "^1.1.0",
     "styled-components": "4.4.1"
-  },
-  "keywords": [
-    "completionist",
-    "gaming"
-  ],
-  "license": "MIT",
-  "scripts": {
-    "build": "gatsby build --prefix-paths",
-    "dev": "gatsby develop",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {
-    "redux-devtools": "3.5.0"
   }
 }
