--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "gatsby-plugin-react-helmet": "3.1.21",
     "gatsby-plugin-styled-components": "3.1.17",
     "gatsby-source-filesystem": "2.1.46",
-    "gatsby-transformer-hjson": "2.2.26",
+    "gatsby-transformer-json": "2.2.25",
     "jquery": "3.4.1",
     "react": "16.12.0",
     "react-circular-progressbar": "2.0.3",
