--- a/renovate.json
+++ b/renovate.json
@@ -7,5 +7,11 @@
   "automerge": true,
   "major": {
     "automerge": false
-  }
+  },
+  "packageRules": [
+    {
+      "packagePatterns": ["^gatsby"],
+      "enabled": false
+    }
+  ]
 }
