--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build --prefix-paths",
-    "dev": "concurrently 'yarn dev:client' 'yarn start'",
-    "dev:client": "gatsby develop",
+    "dev": "gatsby develop",
     "start": "node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
