--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build --prefix-paths",
-    "serve": "gatsby serve",
     "dev": "gatsby develop",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -28,13 +27,14 @@
     "gatsby": "4.23.1",
     "gatsby-link": "4.23.0",
     "gatsby-plugin-react-helmet": "5.23.0",
+    "gatsby-plugin-react-redux-persist": "^1.1.0",
     "gatsby-plugin-styled-components": "5.23.0",
     "gatsby-source-filesystem": "4.23.0",
     "gatsby-transformer-json": "4.23.0",
     "jquery": "3.6.1",
-    "react": "17.0.2",
+    "react": "18.2.0",
     "react-circular-progressbar": "2.1.0",
-    "react-dom": "17.0.2",
+    "react-dom": "18.2.0",
     "react-font-awesome-5": "0.2.2",
     "react-helmet": "6.1.0",
     "react-redux": "8.0.4",
